# solana-app

./: .gitignore  Anchor.toml  Cargo.toml  README.md  airdrop.sh  client.js  createAccountProgram.json  package.json
programs/hello_world/: Cargo.toml
programs/hello_world/src/: lib.rs
programs/program_fils/quarry-mine/src/: lib.rs
programs/program_fils/quarry-mint-wrapper/src/: lib.rs
programs/program_fils/quarry-registry/src/: lib.rs
programs/program_master/: Cargo.toml
programs/program_master/src/: lib.rs
programs/quarry-mine/src/: lib.rs
programs/quarry-mint-wrapper/src/: lib.rs
programs/quarry-registry/src/: lib.rs
programs/solana_app/: Cargo.toml
programs/solana_app/src/: lib.rs
programs/test1/: Cargo.toml
programs/test1/src/: lib.rs
programs/test2/: Cargo.toml
programs/test2/src/: lib.rs
tests/: exmple.js  solana_app.js  test1.js
