[package]
name = "hello_world"
version = "1.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.13.2"
solana-program = "1.7.8"
vipers = "0.1.1"
anchor-spl = "0.13.2"