[package]
name = "solana_app"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_app"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.13.2"
quarry-mine = { version = "1.1.0", path = "../quarry-mine", features = ["cpi"] }
hello_world = { version = "1.1.0", path = "../hello_world", features = ["cpi"] }
solana-program = "1.7.8"
vipers = "0.1.1"
anchor-spl = "0.13.2"
